projects/vb6parse/snapshots/parsers/cst/module_options/option_statements/parse_option_compare_database.snap
---
source: projects/vb6parse/tests/module_options/option_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: OptionStatement
      children:
        - kind: OptionKeyword
          text: Option
        - kind: Whitespace
          text: " "
        - kind: CompareKeyword
          text: Compare
        - kind: Whitespace
          text: " "
        - kind: DatabaseKeyword
          text: Database
        - kind: Newline
          text: "\n"
