projects/vb6parse/snapshots/parsers/cst/module_options/option_statements/parse_option_private_module.snap
---
source: projects/vb6parse/tests/module_options/option_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: OptionStatement
      children:
        - kind: OptionKeyword
          text: Option
        - kind: Whitespace
          text: " "
        - kind: PrivateKeyword
          text: Private
        - kind: Whitespace
          text: " "
        - kind: ModuleKeyword
          text: Module
        - kind: Newline
          text: "\n"
